[package]
name = "hibiki"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
llama-cpp-2 = { git = "https://github.com/xutianyi1999/llama-cpp-rs.git", default-features = true, branch = "update-llama-cpp-2025-01-06"}
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
log = "0.4"
log4rs = "1"
async-openai = {version =  "0.26", default-features = false}
flume = { version = "0.11", default-features = false, features = ["async"] }
rand = "0.8"
chrono = "0.4"
futures-util = { version = "0.3" , default-features = false }

[features]
cuda = ["llama-cpp-2/cuda"]

[profile.release]
lto = true
codegen-units = 1