[package]
name = "hibiki"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
llama-cpp-2 = { git = "https://github.com/xutianyi1999/llama-cpp-rs.git", default-features = true, branch = "update-llama-cpp-2025-02-05" }
llama-cpp-sys-2 = { git = "https://github.com/xutianyi1999/llama-cpp-rs.git", default-features = true, branch = "update-llama-cpp-2025-02-05" }
#llama-cpp-2 = { path = "D:/code/rust/llama-cpp-rs/llama-cpp-2", default-features = true }
#llama-cpp-sys-2 = { path = "D:/code/rust/llama-cpp-rs/llama-cpp-sys-2", default-features = true }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
log = "0.4"
log4rs = "1"
async-openai = {version = "0.27", default-features = false}
flume = { version = "0.11", default-features = false, features = ["async", "select"] }
rand = "0.9"
chrono = "0.4"
futures-util = { version = "0.3" , default-features = false }
serde = { version = "1", features = ["derive"] }

[features]
cuda = ["llama-cpp-2/cuda"]
dynlink = ["llama-cpp-2/dynamic-link"]

[profile.release]
lto = true
codegen-units = 1
